--- a/index.html
+++ b/index.html
@@ -192,23 +192,17 @@
 
     const letterText = `
 
+তোমাকে লেখা এই চিঠির প্রতিটি শব্দ যেন আমার হৃদয়ের গভীর থেকে উঠে আসা কিছু অনুভূতির প্রতিচ্ছবি। জানি না কীভাবে বলা উচিত, অথবা আদৌ বলা সম্ভব কি না—তবুও চেষ্টা করছি।
 
-শুরু করবো কেমন করে বুঝতে পারছি না। শব্দরা যেন হঠাৎ করে লাজুক হয়ে গেছে,
-তোমার নাম উচ্চারণেই মন কেঁপে ওঠে।
+তোমার সাথে প্রথম দেখা হওয়ার দিনটা এখনো চোখে ভাসে। সেদিন হয়তো বুঝতে পারিনি, কিন্তু ধীরে ধীরে তুমি আমার ভাবনার প্রতিটি কোণে জায়গা করে নিয়েছো। সকালটা তোমার হাসি দিয়ে শুরু হলে সারাদিনটা ভালো কাটে, আর রাতে ঘুম আসার আগে তোমার মুখটাই মনে পড়ে।
 
-তোমার হাসিটা আমার পৃথিবীর সবচেয়ে প্রিয় জিনিসগুলোর একটি। 
-তুমি যখন হাসো, তখন মনে হয় যেন সমস্ত দুঃখ কষ্ট পেছনে ফেলে আসা যায়।
-তুমি আছো বলেই দিনগুলো রঙিন হয়ে ওঠে, 
-রাতগুলো আশায় ভরে ওঠে, স্বপ্নেরা নতুন রূপ পায়।
+তোমার সাথে কথা বললে মনে হয় সময়টা যেন থেমে যায়। তোমার প্রতিটি কথায়, প্রতিটি হাসিতে আমি নিজের মতো করে একটা পৃথিবী গড়ে নিয়েছি—যেখানে শুধু আমি আর তুমি।
 
-তুমি আমার অনুপ্রেরণা, আমার শান্তি, আমার ভালোবাসা।
+ভালোবাসি—এই ছোট্ট শব্দটা হয়তো আমার অনুভূতির বিশালতা বোঝাতে পারবে না। তবুও বলছি, কারণ তুমি জানার অধিকার রাখো। আমি তোমায় গভীরভাবে, নিরবচ্ছিন্নভাবে, নিঃশর্তভাবে ভালোবাসি।
 
-এই ছোট্ট পৃথিবীতে তোমার অস্তিত্বই আমার সবচেয়ে বড় প্রাপ্তি।
+জানি, জীবন সবসময় মসৃণ হয় না। কিন্তু আমি চাই, সেই প্রতিটি কঠিন সময়েও তুমি আমার পাশে থাকো। আমি প্রতিজ্ঞা করছি, তোমার হাসি রক্ষার জন্য নিজের সমস্ত ভালোবাসা দিয়ে চেষ্টা করব, আজীবন।
 
-ভালোবাসা নিঃশেষ নয়, 
-আমার ভালোবাসা তোমার জন্য প্রতিটা মুহূর্তেই নতুনভাবে জন্ম নেয়।
-
-সারাজীবন তোমার পাশে থাকতে চাই।
+এই চিঠিটা তুমি যখনই পড়ো, শুধু এটুকু মনে রেখো—কেউ একজন আছেই, যে তোমার প্রতিটি নিঃশ্বাসে বাঁচে।
 
 `;
 
